fixed spacing in homepage

--- a/pp.css
+++ b/pp.css
@@ -153,3 +153,177 @@ section.page-intro div {
 .last-project {
   padding-bottom: 6em;
 }
+
+@media (max-width: 580px) {
+  body {
+    font-size: 18px;
+    margin: 20px 24px;
+    /* font-size: 20px; */
+  }
+
+  .name {
+    position: unset;
+    z-index: 2;
+    margin-top: 0;
+    text-transform: uppercase;
+    color: #6b7171;
+    color: black;
+    font-size: 6vh;
+    /* margin-left: 5.2vh; */
+    margin-left: 4.1vh;
+    line-height: 0.85;
+    width: 56vw;
+  }
+
+  section.cv {
+    margin-left: 0;
+    flex-direction: column;
+    margin-top: 8vh;
+    padding-bottom: 2vh;
+  }
+
+  h2 {
+    /* font-size: 20px; */
+    font-size: 18px;
+    /* line-height: 1.28; */
+    line-height: 1.34;
+  }
+
+  .bottom-margin {
+    margin-bottom: 5vh;
+  }
+
+  .column-2 {
+    margin-top: 3.5vh;
+  }
+
+  .project-description {
+    max-width: 100%;
+  }
+
+  .mobile-ig {
+    display: flex;
+  }
+
+  .desktop-ig {
+    display: none;
+  }
+
+  nav {
+    position: fixed;
+    left: 24px;
+    left: 1.2vh;
+    /* transform: translateX(0%); */
+    z-index: 2;
+    top: 20px;
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    transform: rotate(-90deg) translateX(-100%);
+    transform-origin: left top;
+  }
+
+  nav a {
+    margin-left: 6px;
+    white-space: nowrap;
+  }
+
+  nav a:first-child {
+    margin-left: 0px;
+  }
+
+  .time {
+    display: none;
+  }
+
+  h1 {
+    /* font-size: 36px; */
+    font-size: 10vw;
+    line-height: 1.18;
+  }
+
+  .about-text,
+  section.cv {
+    margin-left: 4vh;
+  }
+
+  section.cv {
+    margin-top: 4vh;
+  }
+
+  .about-text {
+    /* padding-top: 14vh; */
+    padding-top: 2vh;
+  }
+
+  .skills-list p {
+    margin-bottom: 0px;
+    font-size: 17px;
+  }
+
+  .education,
+  .experience {
+    margin-bottom: 12px;
+    line-height: 1.3;
+  }
+}
+
+@media (max-width: 900px) {
+  body {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 780px) {
+  nav {
+    position: fixed;
+    left: unset;
+    transform: translateX(0%);
+    z-index: 2;
+    right: 40px;
+  }
+  .time {
+    display: none;
+  }
+}
+
+@media (max-width: 480px) {
+  body {
+    margin: 20px 24px;
+  }
+  /* h2 {
+    font-size: 24px;
+    line-height: 1.4;
+  } */
+  .about-text {
+    padding-top: 1vh;
+  }
+}
+
+@media (max-width: 380px) {
+  /* section.cv {
+    margin-top: 6vh;
+  } */
+  /* nav {
+    font-size: 20px;
+  } */
+  .about-text,
+  section.cv {
+    margin-left: 2.8vh;
+  }
+  .name {
+    margin-left: 3.1vh;
+  }
+}
+
+@media (max-width: 336px) {
+  body,
+  nav,
+  h2 {
+    font-size: 16px;
+  }
+  .skills-list p,
+  .info-section__text {
+    font-size: 15.4px;
+  }
+}
